# go_cross_reproducible

./: .bazelrc  BUILD.bazel  WORKSPACE  main.go
proto/: BUILD.bazel  msg.proto
