load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "msg_proto",
    srcs = ["msg.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "msg_go_proto",
    importpath = "github.com/Illedran/go_cross_reproducible/proto",
    proto = ":msg_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":msg_go_proto"],
    importpath = "github.com/Illedran/go_cross_reproducible/proto",
    visibility = ["//visibility:public"],
)
